[gd_scene load_steps=14 format=3 uid="uid://c65eurjoqd11o"]

[ext_resource type="Theme" uid="uid://bkorw3gs008io" path="res://addons/AddonUIComponents/FF_Theme.tres" id="1_11hwm"]
[ext_resource type="Script" uid="uid://mhjh5oyudo6c" path="res://addons/DialogEditor/dialog_editor_ui.gd" id="2_oti53"]
[ext_resource type="Script" uid="uid://fk7kflknk12n" path="res://scripts/resource_definitions/dialog_res.gd" id="3_dbx3p"]
[ext_resource type="Resource" uid="uid://bva8bs5gcorl" path="res://Data/Dialog/test_dialog.tres" id="4_8rulg"]
[ext_resource type="AudioStream" uid="uid://db01h3k1d21lp" path="res://addons/AddonUIComponents/Sounds/select.mp3" id="4_vjuiv"]
[ext_resource type="AudioStream" uid="uid://cf825pr1p8l4v" path="res://addons/AddonUIComponents/Sounds/new_file.mp3" id="5_8b1wl"]
[ext_resource type="Texture2D" uid="uid://c14n0o1q3m7xt" path="res://addons/AddonUIComponents/Textures/item_list_pointer.png" id="5_nugw4"]
[ext_resource type="Resource" uid="uid://boaakr5p10afv" path="res://Data/Dialog/test.tres" id="5_xe2et"]
[ext_resource type="Resource" uid="uid://b5ae3viv0ikow" path="res://Data/Dialog/test_phone.tres" id="6_8rulg"]
[ext_resource type="AudioStream" uid="uid://c0ytwgmgv3qcn" path="res://addons/AddonUIComponents/Sounds/reload.mp3" id="6_fjsj2"]
[ext_resource type="AudioStream" uid="uid://x8acmbjgupdu" path="res://addons/AddonUIComponents/Sounds/save.mp3" id="7_ghuyq"]
[ext_resource type="AudioStream" uid="uid://s7r0nf4x8chj" path="res://addons/AddonUIComponents/Sounds/cancel.mp3" id="8_lsjh5"]
[ext_resource type="AudioStream" uid="uid://bii71tgc1q5ew" path="res://addons/AddonUIComponents/Sounds/Music/101 Ahead on our Way.mp3" id="11_8rulg"]

[node name="Control" type="PanelContainer" node_paths=PackedStringArray("click_sound_player", "save_sound_player", "reload_sound_player", "new_file_sound_player", "delete_sound_player", "audio_selection_list", "bus_selection", "dialog_list", "dialog_name", "text_entry", "page_count_label", "checkButton", "flags_text", "music_player", "line_preview_player", "toggle_music_button")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_11hwm")
script = ExtResource("2_oti53")
click_sound_player = NodePath("click_sound")
save_sound_player = NodePath("save_sound")
reload_sound_player = NodePath("reload_sound")
new_file_sound_player = NodePath("new_sound")
delete_sound_player = NodePath("delete_sound")
audio_selection_list = NodePath("VBoxContainer/ContentPanel/content/DataContainer/Data/audio_box/audio_selector")
bus_selection = NodePath("VBoxContainer/ContentPanel/content/DataContainer/Data/bus_section/bus selector")
dialog_data = Dictionary[String, ExtResource("3_dbx3p")]({
"test": ExtResource("5_xe2et"),
"test_dialog": ExtResource("4_8rulg"),
"test_phone": ExtResource("6_8rulg")
})
dialog_list = NodePath("VBoxContainer/ContentPanel/content/NoteList/Notes/note_list")
item_list_pointer_icon = ExtResource("5_nugw4")
dialog_name = NodePath("VBoxContainer/ContentPanel/content/NoteList/Notes/new note/LineEdit")
text_entry = NodePath("VBoxContainer/ContentPanel/content/DataContainer/Data/text_box/TextEdit")
page_count_label = NodePath("VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector/page counter")
checkButton = NodePath("VBoxContainer/ContentPanel/content/DataContainer/Data/CheckButton")
flags_text = NodePath("VBoxContainer/ContentPanel/content/DataContainer/Data/flags/TextEdit")
music_player = NodePath("background_music")
line_preview_player = NodePath("line_preview_player")
toggle_music_button = NodePath("VBoxContainer/BottomPanel/bottom/toggle_music")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ButtonsPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="topButtons" type="HBoxContainer" parent="VBoxContainer/ButtonsPanel"]
layout_mode = 2

[node name="save_selected" type="Button" parent="VBoxContainer/ButtonsPanel/topButtons"]
layout_mode = 2
text = "save"

[node name="save_all" type="Button" parent="VBoxContainer/ButtonsPanel/topButtons"]
layout_mode = 2
text = "save all"

[node name="reload" type="Button" parent="VBoxContainer/ButtonsPanel/topButtons"]
layout_mode = 2
text = "reload"

[node name="delete_selected" type="Button" parent="VBoxContainer/ButtonsPanel/topButtons"]
layout_mode = 2
text = "delete"

[node name="Container" type="Control" parent="VBoxContainer/ButtonsPanel/topButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/ButtonsPanel/topButtons"]
layout_mode = 2
theme = ExtResource("1_11hwm")
text = "Dialog Editor"

[node name="ContentPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="content" type="HBoxContainer" parent="VBoxContainer/ContentPanel"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="NoteList" type="PanelContainer" parent="VBoxContainer/ContentPanel/content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Notes" type="VBoxContainer" parent="VBoxContainer/ContentPanel/content/NoteList"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/ContentPanel/content/NoteList/Notes"]
layout_mode = 2
text = "Notes"
horizontal_alignment = 1

[node name="note_list" type="ItemList" parent="VBoxContainer/ContentPanel/content/NoteList/Notes"]
layout_mode = 2
size_flags_vertical = 3
item_count = 2
item_0/text = "test_dialog"
item_1/text = "test"

[node name="new note" type="HBoxContainer" parent="VBoxContainer/ContentPanel/content/NoteList/Notes"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ContentPanel/content/NoteList/Notes/new note"]
layout_mode = 2
theme = ExtResource("1_11hwm")
text = "New Dialog: "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ContentPanel/content/NoteList/Notes/new note"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_11hwm")
placeholder_text = "new Dialog name"

[node name="new_note_button" type="Button" parent="VBoxContainer/ContentPanel/content/NoteList/Notes/new note"]
layout_mode = 2
text = "Add New Note"

[node name="DataContainer" type="PanelContainer" parent="VBoxContainer/ContentPanel/content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Data" type="VBoxContainer" parent="VBoxContainer/ContentPanel/content/DataContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/ContentPanel/content/DataContainer/Data"]
layout_mode = 2
text = "Data"
horizontal_alignment = 1

[node name="audio_box" type="HBoxContainer" parent="VBoxContainer/ContentPanel/content/DataContainer/Data"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/audio_box"]
layout_mode = 2
text = "Line Audio:"

[node name="audio_selector" type="OptionButton" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/audio_box"]
layout_mode = 2
size_flags_horizontal = 3

[node name="play_button" type="Button" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/audio_box"]
layout_mode = 2
text = "play"
alignment = 0

[node name="stop_button" type="Button" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/audio_box"]
layout_mode = 2
text = "stop"
alignment = 0

[node name="text_box" type="HBoxContainer" parent="VBoxContainer/ContentPanel/content/DataContainer/Data"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/text_box"]
layout_mode = 2
text = "Line:"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/text_box"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "type text here"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/ContentPanel/content/DataContainer/Data"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_11hwm")
text = "use position?:"

[node name="bus_section" type="HBoxContainer" parent="VBoxContainer/ContentPanel/content/DataContainer/Data"]
layout_mode = 2

[node name="label" type="Label" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/bus_section"]
layout_mode = 2
text = "Bus"

[node name="bus selector" type="OptionButton" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/bus_section"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 8
popup/item_0/text = "Master"
popup/item_0/id = 0
popup/item_1/text = "sfx"
popup/item_1/id = 1
popup/item_2/text = "music"
popup/item_2/id = 2
popup/item_3/text = "vocal"
popup/item_3/id = 3
popup/item_4/text = "phone"
popup/item_4/id = 4
popup/item_5/text = "ui"
popup/item_5/id = 5
popup/item_6/text = "reverbSFX"
popup/item_6/id = 6
popup/item_7/text = "reverbVocal"
popup/item_7/id = 7

[node name="page_selector" type="HBoxContainer" parent="VBoxContainer/ContentPanel/content/DataContainer/Data"]
layout_mode = 2
size_flags_horizontal = 4

[node name="first_button" type="Button" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector"]
layout_mode = 2
text = "<<"

[node name="Left Button" type="Button" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector"]
layout_mode = 2
theme = ExtResource("1_11hwm")
text = "<"

[node name="Delete Button" type="Button" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector"]
layout_mode = 2
theme = ExtResource("1_11hwm")
text = "-"

[node name="spacer" type="Label" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector"]
visible = false
layout_mode = 2
text = "            "
horizontal_alignment = 1

[node name="page counter" type="Label" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector"]
layout_mode = 2
text = "-- / --"
horizontal_alignment = 1

[node name="Add Button" type="Button" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector"]
layout_mode = 2
theme = ExtResource("1_11hwm")
text = "+"

[node name="Right Button" type="Button" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector"]
layout_mode = 2
theme = ExtResource("1_11hwm")
text = ">"

[node name="last_button" type="Button" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector"]
layout_mode = 2
text = ">>"

[node name="flags" type="HBoxContainer" parent="VBoxContainer/ContentPanel/content/DataContainer/Data"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/flags"]
layout_mode = 2
text = "Flags"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/ContentPanel/content/DataContainer/Data/flags"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type Comma Seperated Flags Here!"

[node name="BottomPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="bottom" type="HBoxContainer" parent="VBoxContainer/BottomPanel"]
layout_mode = 2

[node name="toggle_music" type="Button" parent="VBoxContainer/BottomPanel/bottom"]
layout_mode = 2
text = "Toggle Music (On)"

[node name="click_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vjuiv")
bus = &"ui"

[node name="new_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8b1wl")
bus = &"ui"

[node name="reload_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fjsj2")
bus = &"ui"

[node name="save_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ghuyq")
bus = &"ui"

[node name="delete_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_lsjh5")
bus = &"ui"

[node name="background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_8rulg")

[node name="line_preview_player" type="AudioStreamPlayer" parent="."]

[connection signal="button_down" from="VBoxContainer/ButtonsPanel/topButtons/save_selected" to="." method="save_selected"]
[connection signal="button_down" from="VBoxContainer/ButtonsPanel/topButtons/save_all" to="." method="save_all"]
[connection signal="button_down" from="VBoxContainer/ButtonsPanel/topButtons/reload" to="." method="reload_clicked"]
[connection signal="button_down" from="VBoxContainer/ButtonsPanel/topButtons/delete_selected" to="." method="delete_selected"]
[connection signal="empty_clicked" from="VBoxContainer/ContentPanel/content/NoteList/Notes/note_list" to="." method="note_clear"]
[connection signal="item_selected" from="VBoxContainer/ContentPanel/content/NoteList/Notes/note_list" to="." method="on_dialog_selected"]
[connection signal="text_submitted" from="VBoxContainer/ContentPanel/content/NoteList/Notes/new note/LineEdit" to="." method="new_note_enter"]
[connection signal="button_down" from="VBoxContainer/ContentPanel/content/NoteList/Notes/new note/new_note_button" to="." method="make_new_note"]
[connection signal="item_selected" from="VBoxContainer/ContentPanel/content/DataContainer/Data/audio_box/audio_selector" to="." method="set_res_audio"]
[connection signal="button_down" from="VBoxContainer/ContentPanel/content/DataContainer/Data/audio_box/play_button" to="." method="play_button_clicked"]
[connection signal="button_down" from="VBoxContainer/ContentPanel/content/DataContainer/Data/audio_box/stop_button" to="." method="stop_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/ContentPanel/content/DataContainer/Data/text_box/TextEdit" to="." method="text_edit_finished"]
[connection signal="toggled" from="VBoxContainer/ContentPanel/content/DataContainer/Data/CheckButton" to="." method="check_button_toggle"]
[connection signal="item_selected" from="VBoxContainer/ContentPanel/content/DataContainer/Data/bus_section/bus selector" to="." method="set_bus_from_list"]
[connection signal="button_down" from="VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector/first_button" to="." method="first_page_button_pressed"]
[connection signal="button_down" from="VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector/Left Button" to="." method="on_page_left"]
[connection signal="button_down" from="VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector/Delete Button" to="." method="on_page_delete"]
[connection signal="button_down" from="VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector/Add Button" to="." method="on_add_page"]
[connection signal="button_down" from="VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector/Right Button" to="." method="on_page_right"]
[connection signal="button_down" from="VBoxContainer/ContentPanel/content/DataContainer/Data/page_selector/last_button" to="." method="last_page_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/ContentPanel/content/DataContainer/Data/flags/TextEdit" to="." method="flags_updated"]
[connection signal="button_down" from="VBoxContainer/BottomPanel/bottom/toggle_music" to="." method="toggle_music_pressed"]
